# AzSuicideDataVisualization

./: README.md  pyproject.toml  requirements.txt
app/: main.py  test.ipynb
test/: test_.py
