[tool.poetry]
name = "AzSuicideDataVisualization"
version = "0.1.0"
description = "Visualization of Azerbaijan suicide data"
authors = ["Ayxan <ayxan.shahsuvarov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.0"
plotly = "^5.8.0"
pytest = "^7.1.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
